fixed form spacing

--- a/frontend/src/components/home/home.css
+++ b/frontend/src/components/home/home.css
@@ -1,13 +1,13 @@
 form {
     display: flex;
     width: 40rem;
-    height: 10rem;
+    height: 5rem;
     padding: 0 3rem 0 3rem;
     background-color: #2E2C2C;
     flex-direction: column;
     justify-content: center;
     border-radius: 30px;
-    margin: calc(100vh / 5.5) 0 0 0;
+    margin: calc(100vh / 4) 0 0 0;
     filter: drop-shadow(0 0 0.3rem black);
 }
 
@@ -61,8 +61,7 @@ form > button {
 @media (max-width: 1000px) {
     form {
         width: 38rem;
-        height: 7rem;
-        margin: calc(100vh / 7) 0 0 0;
+        margin: calc(100vh / 5) 0 0 0;
     }
 
     form > input {
@@ -73,7 +72,6 @@ form > button {
 @media (max-width: 768px) {
     form {
         width: 38rem;
-        height: 7rem;
         margin: calc(100vh / 6) 0 0 0;
     }
 
@@ -85,7 +83,6 @@ form > button {
 @media (max-width: 640px) {
     form {
         width: 30rem;
-        height: 6rem;
         margin: calc(100vh / 6) 0 0 0;
     }
 
@@ -110,7 +107,6 @@ form > button {
 @media (max-width: 390px) {
     form {
         width: 20rem;
-        height: 5rem;
         margin: calc(100vh / 4.5) 0 0 0;
         /* padding: 0 2rem 0 2rem; */
     }
